# templates

.github/: README.md
.github/workflows/: workflow-docker-manual.yml  workflow-docker-release.yml
projects/common/: .gitattributes  .gitignore
projects/python/: .pre-commit-config.yaml  README.md  pyproject.toml
projects/python/src/appname/: cli.py
projects/python/src/cli/: main.py
unraid/: ca_profile.xml
unraid/binhex/templates/: _template.xml  bitmagnet.xml  caddy-duckdns.xml  code-server.xml  crafty-4.xml  deluge.xml  delugevpn.xml  emby.xml  fdroidserver.xml  filebrowser.xml  flaresolverr.xml  gamarr.xml  get-iplayer.xml  goland.xml  gonic.xml  healarr.xml  hexchat.xml  intellij.xml  jackett.xml  jellyfin.xml  jenkins.xml  krusader.xml  libreoffice.xml  lidarr.xml  makemkv.xml  minecraftbedrockserver.xml  minecraftserver.xml  minidlna.xml  movarr.xml  nginx.xml  nicotineplus.xml  nzbget.xml  nzbhydra2.xml  official-byparr.xml  official-docker-registry-proxy.xml  official-gluetun.xml  official-metube.xml  official-pihole.xml  official-purgarr.xml  official-qbit-guard.xml  (+30 more)
